--- a/ltx/paper.tex
+++ b/ltx/paper.tex
@@ -1,7 +1,7 @@
 % header stuff
 % ------------
 
-\documentclass[smallcondensed, draft]{svjour3}
+\documentclass[smallcondensed, final]{svjour3}
 % \documentclass[smallcondensed, final]{svjour3}[1/1/2012]
 \usepackage[square,numbers]{natbib}
 \usepackage{amsmath, epsfig}
